UPDATE handle memory limit with java params