@@ -5,9 +5,9 @@ ENV APP_VERSION 1.1.5
 
 WORKDIR /home
 
-RUN export MAVEN_OPTS="-XX:MaxRAM=500m"
+RUN export MAVEN_OPTS="-XX:MaxRAM=500m -Xmx:256m -Xms:256m -Xss:100 -XX:MaxPermSize=128M"
 
 RUN git clone https://github.com/davidesner/keboola-adform-masterdata-extractor ./
 RUN mvn -q compile
 
-ENTRYPOINT mvn -q exec:java -Dexec.args=/data
+ENTRYPOINT java -jar target/KBC_AdForm_Masterdata_extractor-1.1.5-jar-with-dependencies.jar /data
